--- a/package.json
+++ b/package.json
@@ -3,25 +3,13 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "serve ."
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^1.3.0",
+    "@web3-onboard/core": "^2.20.4",
+    "@web3-onboard/injected-wallets": "^2.10.1",
+    "@web3-onboard/walletconnect": "^2.4.2",
     "ethers": "^5.7.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "viem": "^1.19.9",
-    "wagmi": "^1.4.7",
-    "bootstrap": "^5.3.0",
-    "bootstrap-icons": "^1.11.0",
-    "react-bootstrap": "^2.9.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "vite": "^4.4.5"
+    "serve": "^14.0.0"
   }
 } 
