--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "start": "serve ."
   },
   "dependencies": {
-    "serve": "^14.0.0"
+    "serve": "^14.0.0",
+    "@web3modal/ethereum": "^2.7.1",
+    "@web3modal/html": "^2.7.1",
+    "ethers": "^5.7.2",
+    "web3": "^1.8.0"
   }
 } 
