--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   },
   "dependencies": {
     "serve": "^14.0.0",
+    "@web3modal/wagmi": "^3.5.6",
     "@web3modal/ethereum": "^2.7.1",
     "@web3modal/html": "^2.7.1",
-    "ethers": "^5.7.2",
-    "web3": "^1.8.0"
+    "ethers": "^6.9.0",
+    "viem": "^1.21.4",
+    "wagmi": "^1.4.13",
+    "web3": "^4.3.0"
   }
 } 
