--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "start": "serve ."
+    "start": "serve .",
+    "dev": "serve .",
+    "build": "echo 'No build needed for static site'"
   },
   "dependencies": {
     "serve": "^14.0.0",
-    "@web3modal/wagmi": "^3.5.6",
-    "@web3modal/ethereum": "^2.7.1",
-    "@web3modal/html": "^2.7.1",
-    "ethers": "^6.9.0",
-    "viem": "^1.21.4",
-    "wagmi": "^1.4.13",
-    "web3": "^4.3.0"
+    "@privy-io/react-auth": "^1.69.0",
+    "@privy-io/wagmi": "^0.2.12",
+    "viem": "^2.30.6",
+    "wagmi": "^2.0.0",
+    "@tanstack/react-query": "^5.0.0"
   }
 } 
