--- a/package.json
+++ b/package.json
@@ -3,16 +3,11 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "start": "serve .",
-    "dev": "serve .",
-    "build": "echo 'No build needed for static site'"
+    "start": "serve ."
   },
   "dependencies": {
     "serve": "^14.0.0",
-    "@privy-io/react-auth": "^1.69.0",
-    "@privy-io/wagmi": "^0.2.12",
-    "viem": "^2.30.6",
-    "wagmi": "^2.0.0",
-    "@tanstack/react-query": "^5.0.0"
+    "@privy-io/js-sdk": "^1.69.0",
+    "ethers": "^6.9.0"
   }
 } 
