--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,24 @@
 {
-  "version": 2,
-  "routes": [
+  "rewrites": [
     {
-      "src": "/",
-      "dest": "/react-app.html"
+      "source": "/",
+      "destination": "/react-app.html"
     },
     {
-      "src": "/react-app",
-      "dest": "/react-app.html"
+      "source": "/react-app",
+      "destination": "/react-app.html"
     },
     {
-      "src": "/old-index",
-      "dest": "/index.html"
+      "source": "/old-index",
+      "destination": "/index.html"
     },
     {
-      "src": "/(.*\\.(js|css|json|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot))",
-      "dest": "/$1"
+      "source": "/(.*\\.(js|css|json|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot))",
+      "destination": "/$1"
     },
     {
-      "src": "/(.*)",
-      "dest": "/react-app.html"
+      "source": "/(.*)",
+      "destination": "/react-app.html"
     }
   ],
   "headers": [
