--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "serve .",
     "dev": "serve .",
-    "build": "echo 'Static site - no build needed'",
+    "build": "echo 'Static site files ready in public directory'",
     "test-privy": "echo 'Open react-app.html in browser'"
   },
   "dependencies": {
