РЕШЕНА ПРОБЛЕМА: Полная миграция на Privy React Auth SDK - Переход на официальный @privy-io/react-auth SDK - Устранение конфликтов с MetaMask - React 18 + CDN архитектура - Современный адаптивный UI - Поддержка Seismic Network - Готовность к деплою на Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,12 @@
 {
   "rewrites": [
     {
-      "source": "/",
-      "destination": "/react-app.html"
-    },
-    {
-      "source": "/react-app",
-      "destination": "/react-app.html"
-    },
-    {
-      "source": "/old-index",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/(.*)\\.(js|css|json|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot)",
-      "destination": "/$1.$2"
+      "source": "/(.*\\.(js|css|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot))",
+      "destination": "/$1"
     },
     {
       "source": "/(.*)",
-      "destination": "/react-app.html"
+      "destination": "/index.html"
     }
   ],
   "headers": [
