--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
-  "name": "seismic-experience",
+  "name": "seismic-game",
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "start": "serve .",
-    "dev": "serve .",
-    "build": "echo 'Static site files ready in public directory'",
-    "test-privy": "echo 'Open react-app.html in browser'"
+    "start": "webpack serve --mode development --open",
+    "build": "webpack --mode production",
+    "vercel-build": "npm run build",
+    "dev": "webpack serve --mode development",
+    "preview": "serve dist"
   },
   "dependencies": {
-    "serve": "^14.0.0",
     "@privy-io/react-auth": "^1.69.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0"
+    "@babel/core": "^7.22.0",
+    "@babel/preset-env": "^7.22.0",
+    "@babel/preset-react": "^7.22.0",
+    "babel-loader": "^9.1.0",
+    "css-loader": "^6.8.0",
+    "html-webpack-plugin": "^5.5.0",
+    "serve": "^14.0.0",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.88.0",
+    "webpack-cli": "^5.1.0",
+    "webpack-dev-server": "^4.15.0"
   },
-  "description": "Seismic blockchain application with official Privy React Auth SDK",
-  "main": "react-app.html",
+  "description": "Seismic blockchain game with official Privy React Auth SDK",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "seismic-game"
