--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@privy-io/react-auth": "^1.69.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "ethers": "^6.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.0",
@@ -35,5 +36,10 @@
   },
   "keywords": ["blockchain", "seismic", "privy", "react", "authentication", "wallet"],
   "author": "Seismic Team",
-  "license": "MIT"
+  "license": "MIT",
+  "homepage": "https://seismic-game.vercel.app",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  }
 } 
