--- a/vercel.json
+++ b/vercel.json
@@ -52,7 +52,7 @@
       ]
     },
     {
-      "source": "/(.*\\.(js|css))",
+      "source": "/static/js/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
@@ -61,7 +61,16 @@
       ]
     },
     {
-      "source": "/(.*\\.(png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
+      "source": "/static/css/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/assets/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
